# ConfIDent_schema

./: Makefile  README.md  setup.cfg  setup.py
.github/workflows/: main.yaml
confident_schema/: confident_schema.py
confident_schema/json/: confident_schema.json
confident_schema/jsonld/: confident_schema.context.jsonld  confident_schema.model.context.jsonld
confident_schema/jsonschema/: confident_schema.schema.json
docs/: index.html
docs/search/: search_index.json
model/: CONFIG.yaml
model/schema/: confident_schema.yaml
tests/: test_input_against_model.py
