[metadata]
name = confident_schema
url = https://github.com/stroemphi/confident_schema
author = Philip Strömert
author_email = philip.stroemert@tib.eu
summary = A model to describe academic events and event series.
description = A model to describe academic events and event series.
long_description = A model to describe academic events and event series.
home_page = https://stroemphi.github.io/confident_schema
license = CC0 1.0 Universal
python_requires = >=3.7
classifiers = 
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: Information Technology
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
keywords = 
    linkml
    LOD
    Modeling
    Linked open data
    model

[options]
include_package_data = True

[files]
packages =
    confident_schema

data-files = confident_schema/model = confident_schema/model/*
    confident_schema/jsonld_context = confident_schema/jsonld_context/*
    confident_schema/json_schema = confident_schema/json_schema/*
    confident_schema/model = confident_schema/model/*


